# orpheus-tts-local

./: .gitignore  hello.py  pyproject.toml
backend/: decoder.py  gguf_orpheus.py  server.py
orpheus-webui/: package-lock.json  package.json
orpheus-webui/src/: App.tsx
server/: Cargo.toml
server/lib/: mod.rs  state.rs  text.rs
server/lib/handlers/: mod.rs  speech.rs
server/resources/: orpheus_chat_template.json
server/src/: main.rs
